<resources>
    <string name="app_name">prueba-desconecta</string>
    <string name="welcome">Benvinguts a</string>
    <string name="colab">Amb la col·laboració de:</string>
    <string name="next">Següent</string>
    <string name="discover">Descobreix</string>
    <string name="discover_description">"Passeja pel museu fins que t’hi sentis còmode.  Busca les diferents peces que et proposem i tria’n una.  "</string>
    <string name="chosen">Obra escollida:</string>
    <string name="draw">Dibuixa</string>
    <string name="draw_description">Intenta dibuixar l’objecte que tens al davant, no et preocupar per la qualitat final, intenta-ho. Quan acabis fes-li una fotografia</string>
    <string name="write">Escriu</string>
    <string name="write_description">Ara que coneixes l’objecte deixa anar la creativitat. Quines històries hi imagines?</string>
    <string name="create">Crea</string>
    <string name="revisit">Revisita</string>
    <string name="end">Finalitza</string>
    <string name="music1">associa</string>
    <string name="concentrate_instructions">"Concentra't en l'objecte i escriu les emocions o els conceptes que et genera. "</string>
    <string name="concentrate">Concentra\'t</string>
    <string name="instruction_assosiates">Concentra’t en l’objecte i escriu el títol de les cançons o la música que hi connectaries. Si vols tataraleja-les.</string>
    <string name="associate">Associa</string>
    <string name="textHint">Escriu aquí</string>
</resources>